ci: 배포 URL 출력 명령 인용부호 적용

--- a/.github/workflows/fork-and-deploy.yml
+++ b/.github/workflows/fork-and-deploy.yml
@@ -82,4 +82,4 @@ jobs:
           echo "url=$url" >> "$GITHUB_OUTPUT"
 
       - name: Deployment URL
-        run: echo "Deployed: ${{ steps.deploy.outputs.url }}"
+        run: 'echo "Deployed: ${{ steps.deploy.outputs.url }}"'
