--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
+    "@tanstack/react-query": "5.90.5",
+    "@tanstack/react-query-devtools": "5.90.2",
     "@vanilla-extract/css": "^1.17.4",
     "lucide-react": "^0.546.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-router-dom": "^7.9.4"
+    "react-router-dom": "^7.9.4",
+    "zustand": "5.0.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.35.0",
