build: shared 경로 별칭 추가

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -14,7 +14,8 @@
     "moduleDetection": "force",
     "baseUrl": "./src",
     "paths": {
-      "@styles/*": ["styles/*"]
+      "@styles/*": ["styles/*"],
+      "shared/*": ["shared/*"]
     },
     "noEmit": true,
     "jsx": "react-jsx",
