--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "@tanstack/react-query": "5.90.5",
     "@tanstack/react-query-devtools": "5.90.2",
     "@vanilla-extract/css": "^1.17.4",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.546.0",
     "react": "^19.1.1",
+    "react-day-picker": "^9.11.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.4",
     "zustand": "5.0.8"
