--- a/.github/workflows/fork-and-deploy.yml
+++ b/.github/workflows/fork-and-deploy.yml
@@ -56,8 +56,7 @@ jobs:
       - name: Install pnpm (if pnpm-lock.yaml exists)
         if: hashFiles('pnpm-lock.yaml') != ''
         uses: pnpm/action-setup@v4
-        with:
-          version: 9
+        # packageManager 필드에 정의된 pnpm 버전 자동 사용
 
       - name: Install Vercel CLI
         run: npm i -g vercel@latest
