--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.35.0",
-    "@jbabin91/tsc-files": "^0.6.1",
     "@types/react": "^19.1.12",
     "@types/react-dom": "^19.1.9",
     "@vanilla-extract/vite-plugin": "^5.1.1",
@@ -44,6 +43,13 @@
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.43.0",
     "vite": "^7.1.5"
+  },
+  "lint-staged": {
+    "**/*.{ts,tsx,js,jsx}": [
+      "pnpm exec eslint --fix",
+      "pnpm exec prettier --write"
+    ],
+    "**/*.{json,css,scss,md}": "pnpm exec prettier --write"
   },
   "packageManager": "pnpm@10.19.0+sha512.c9fc7236e92adf5c8af42fd5bf1612df99c2ceb62f27047032f4720b33f8eacdde311865e91c411f2774f618d82f320808ecb51718bfa82c060c4ba7c76a32b8"
 }
