refactor: className 제거하고 Emotion css prop 적용

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -19,6 +19,7 @@
     },
     "noEmit": true,
     "jsx": "react-jsx",
+    "jsxImportSource": "@emotion/react",
 
     /* Linting */
     "strict": true,
