--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
     "@tanstack/react-query-devtools": "5.90.2",
     "@vanilla-extract/css": "^1.17.4",
     "date-fns": "^4.1.0",
+    "i18next": "^25.6.2",
+    "i18next-browser-languagedetector": "^8.2.0",
     "lucide-react": "^0.546.0",
     "react": "^19.1.1",
     "react-day-picker": "^9.11.1",
     "react-dom": "^19.1.1",
+    "react-i18next": "^16.3.3",
     "react-router-dom": "^7.9.4",
     "zustand": "5.0.8"
   },
