--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-day-picker": "^9.11.1",
     "react-dom": "^19.1.1",
     "react-i18next": "^16.3.3",
+    "react-naver-maps": "^0.1.4",
     "react-router-dom": "^7.9.4",
     "zustand": "5.0.8"
   },
