--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "i18next": "^25.6.2",
     "i18next-browser-languagedetector": "^8.2.0",
     "lucide-react": "^0.546.0",
+    "overlay-kit": "^1.8.6",
     "react": "^19.1.1",
     "react-day-picker": "^9.11.1",
     "react-dom": "^19.1.1",
