--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint .",
     "format": "prettier --check .",
     "format:write": "prettier --write .",
+    "test": "vitest run",
     "typecheck": "tsc --noEmit --pretty false",
     "preview": "vite preview"
   },
@@ -33,6 +34,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.35.0",
+    "@types/node": "^24.10.1",
     "@types/react": "^19.1.12",
     "@types/react-dom": "^19.1.9",
     "@vanilla-extract/vite-plugin": "^5.1.1",
@@ -46,7 +48,8 @@
     "prettier": "^3.6.2",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.43.0",
-    "vite": "^7.1.5"
+    "vite": "^7.1.5",
+    "vitest": "^4.0.10"
   },
   "lint-staged": {
     "**/*.{ts,tsx,js,jsx}": [
