--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-dom": "^19.1.1",
     "react-i18next": "^16.3.3",
     "react-router-dom": "^7.9.4",
+    "zod": "^4.1.13",
     "zustand": "5.0.8"
   },
   "devDependencies": {
